# misc

./: README.md
2021-12-21-mock/: README.md
2021-12-21-mock/src/: b.rs
2022-04-26-photo-album/: Cargo.toml  README.md
2022-04-26-photo-album/src/: main.rs
2022-04-26-photo-album/templates/: album.html  base.html  index.html
bash_completion/: command.py  completion.sh
language_comparative_table/: MeasureElapsedTime.cc  MeasureElapsedTime.js  MeasureElapsedTime.md  MeasureElapsedTime.py  nlp100_ch1.js  nlp100_ch1.py
mock-sample/: Cargo.toml
mock-sample/src/: a.rs
