[package]
name = "photo-album"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
actix-multipart = "0.4.0"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }

tera = "1.15.0"
lazy_static = "1.0"
anyhow = "1.0.57"